Change project structure

--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "website-a20",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Vinh",
   "license": "ISC",
   "description": "",
   "dependencies": {
